Worked on parsing files to templates and executing the files to a new file or to the standard output

--- a/002-Parsing-Templates/templates/tpl.html
+++ b/002-Parsing-Templates/templates/tpl.html
@@ -5,7 +5,7 @@
 	<title>Hello World!</title>
 	</head>
 	<body>
-	<h1> Seward Mupereri </h1>
+	<h1> Drop by drop, the bucket gets filled! </h1>
 	</body>
 	</html>
 	
